# AioHTTP_NoteAppSite

./: app.py  docker-compose.yaml  pyproject.toml
conf/: config.yaml
migrations/: env.py
migrations/versions/: 73711cd82f58_init.py
src/: db.py  models.py  routes.py  settings.py  views.py
src/templates/: detail.html  index.html  note.html  tag.html
